@@ -54,14 +54,12 @@ typedef __suseconds_t suseconds_t;
 /* The fd_set member is required to be an array of longs.  */
 typedef long int __fd_mask;
 
-/* Some versions of <linux/posix_types.h> define these macros.  */
+/* Some versions of <linux/posix_types.h> define this macros.  */
 #undef	__NFDBITS
-#undef	__FDELT
-#undef	__FDMASK
 /* It's easier to assume 8-bit bytes than to get CHAR_BIT.  */
 #define __NFDBITS	(8 * (int) sizeof (__fd_mask))
-#define	__FDELT(d)	((d) / __NFDBITS)
-#define	__FDMASK(d)	((__fd_mask) 1 << ((d) % __NFDBITS))
+#define	__FD_ELT(d)	((d) / __NFDBITS)
+#define	__FD_MASK(d)	((__fd_mask) 1 << ((d) % __NFDBITS))
 
 /* fd_set for select and pselect.  */
 typedef struct
