@@ -1,5 +1,15 @@
 2011-09-13  Andreas Schwab  <schwab@redhat.com>
 
+	* misc/sys/select.h (__FD_MASK): Renamed from __FDMASK.
+	(__FD_ELT): Renamed from __FDELT.
+	* misc/bits/select2.h (__FD_ELT): Likewise.
+	* bits/select.h (__FD_SET, __FD_CLR, __FD_ISSET): Use __FD_ELT,
+	__FD_MASK instead of __FDELT, __FDMASK.
+	* sysdeps/i386/bits/select.h (__FD_SET, __FD_CLR, __FD_ISSET):
+	Likewise.
+	* sysdeps/x86_64/bits/select.h (__FD_SET, __FD_CLR, __FD_ISSET):
+	Likewise.
+
 	* elf/Makefile (gen-ldd): Fix pattern.
 
 	* elf/rtld.c (dl_main): Only use USE___THREAD when defined.
